fix: align header with crash game panel

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -19,8 +19,7 @@
 .header_container {
   display: flex;
   justify-content: space-between;
-  margin-left: 256px;
-  max-width: 1100px;
+  max-width: 1072px;
   width: 100%;
 }
 
